# librime

./: .gitignore  .gitmodules  CMakeLists.txt  build_ios.sh
cmake/: ios.toolchain.cmake
include/: darts.h
plugins/: CMakeLists.txt
src/: CMakeLists.txt  rime_api.cc  rime_api.h
src/rime/: common.h  composition.cc  context.h  deployer.cc  deployer.h  engine.h  key_event.cc  messenger.h  resource.cc  resource.h  schema.cc  setup.cc  signature.cc  util.h
src/rime/algo/: algebra.cc  calculus.cc  calculus.h  encoder.cc  encoder.h  syllabifier.cc  utilities.cc  utilities.h
src/rime/config/: auto_patch_config_plugin.cc  build_info_plugin.cc  config_compiler.cc  config_data.cc  config_types.cc  default_config_plugin.cc  legacy_preset_config_plugin.cc  save_output_plugin.cc
src/rime/dict/: db.cc  dict_compiler.cc  dict_settings.cc  dictionary.cc  entry_collector.cc  level_db.cc  mapped_file.cc  mapped_file.h  preset_vocabulary.cc  reverse_lookup_dictionary.cc  string_table.cc  table_db.cc  tsv.cc  user_db.cc  user_db_recovery_task.cc  user_dictionary.cc
src/rime/gear/: affix_segmentor.cc  key_binder.cc  navigator.cc  recognizer.cc  recognizer.h  reverse_lookup_translator.cc  script_translator.cc  shape.cc  simplifier.cc  speller.cc  speller.h  switch_translator.cc  table_translator.cc  translator_commons.cc  translator_commons.h  unity_table_encoder.cc
src/rime/lever/: custom_settings.cc  customizer.cc  deployment_tasks.cc  switcher_settings.cc  user_dict_manager.cc
test/: CMakeLists.txt  algebra_test.cc  config_compiler_test.cc  resource_resolver_test.cc
